log
Thu Mar 26 07:04:56 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
3b95f6f
Thu Mar 26 07:07:46 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
2121d3a
Thu Mar 26 07:18:18 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:31: error: expected ‘;’ before ‘}’ token
   50 |     return list->current->data
      |                               ^
      |                               ;
   51 | }
      | ~                              
aaf7cbd
Thu Mar 26 07:18:36 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
55c3802
Thu Mar 26 07:19:08 PM UTC 2026: 
 tests:  0|0
aceb476
Thu Mar 26 07:20:43 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3c3997d
Thu Mar 26 07:22:40 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c1df01f
Thu Mar 26 07:25:21 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1828be8
Thu Mar 26 07:26:29 PM UTC 2026: 
 tests:  0|0
95ddc2b
Thu Mar 26 07:27:07 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22febed
Thu Mar 26 07:29:05 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
bc2bb58
Thu Mar 26 07:31:49 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
7328115
Thu Mar 26 07:32:45 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f5f7fb9
Thu Mar 26 07:36:23 PM UTC 2026: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
42cf72a
Thu Mar 26 07:36:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f4a9cb8
Thu Mar 26 07:37:38 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 30/60
c82d032
Thu Mar 26 07:56:55 PM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 30/60
8e2ca73
Thu Mar 26 08:00:25 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 30/60
1d827fb
Thu Mar 26 08:02:44 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:86:28: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   86 |     return list -> current -> prev;
      |            ~~~~~~~~~~~~~~~~^~~~~~~
list.c:78:6: note: declared here
   78 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
af0b327
Thu Mar 26 08:04:00 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
afc9cc0
Sun Mar 29 10:11:15 PM UTC 2026: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:106:31: error: ‘nuevo’ undeclared (first use in this function)
  106 |     list -> current -> next = nuevo Dato;
      |                               ^~~~~
list.c:106:31: note: each undeclared identifier is reported only once for each function it appears in
list.c:106:36: error: expected ‘;’ before ‘Dato’
  106 |     list -> current -> next = nuevo Dato;
      |                                    ^~~~~
      |                                    ;
880ecfe
